[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = ""
dynamic = ["version"]
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 120
select = [
    "E", # Pycodestyle errors
    "F", # Pyflakes
    "I", # Isort
    "PL", # Pylint
    "UP", # Pyupgrade
]

[tool.pylint.format]
max-line-length = 120

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
version = {file = ["VERSION.txt"]}